add project page v1

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,10 +115,8 @@ const allSkills = getAllSkillsInOneArray();
           <p class="text-2xl font-semibold">
             More than <span>{projects.length}</span> projects
           </p>
-          <a
-            href="/projects"
-            target="_blank"
-            class="text-sm underline font-semibold">See all</a
+          <a href="/projects/all" class="text-sm underline font-semibold"
+            >See all</a
           >
         </PersonalDataCard>
         <PersonalDataCard icon="mdi:youtube">
