--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,15 +2,17 @@
 interface Props {
   background: "light" | "dark";
   className?: string;
+  id?: string;
 }
 
-const { background, className } = Astro.props;
+const { background, className, id } = Astro.props;
 ---
 
 <section
   class={`${
     background === "light" ? "bg-customGray-200" : "bg-customGray-300"
   } px-6 sm:px-12 md:px-16 lg:px-28 ${className}`}
+  id={id}
 >
   <slot />
 </section>
