--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
-import Nav from "../components/Nav.astro";
+import HomeNav from "../components/HomeNav.astro";
 import "../styles/global.css";
 ---
 
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -12,7 +12,6 @@ import "../styles/global.css";
     <title>Portfolio</title>
   </head>
   <body class="text-white bg-customGray-200 flex flex-col">
-    <Nav />
     <slot />
   </body>
 </html>
