--- a/src/components/LogoName.astro
+++ b/src/components/LogoName.astro
@@ -2,7 +2,7 @@
 ---
 
 <a
-  href=""
+  href="/"
   class="flex justify-center items-center md:text-2xl lg:text-xl xl:text-2xl font-bold gap-2"
   >Francesco <span class="font-normal text-gray-200">Alterio</span></a
 >
