--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
     <meta name="generator" content={Astro.generator} />
     <title>Portfolio</title>
   </head>
-  <body class="text-white bg-customGray-200 flex flex-col">
+  <body class="text-white bg-customGray-200 min-h-[1080px]">
     <slot />
   </body>
 </html>
