--- a/src/components/HomeNav.astro
+++ b/src/components/HomeNav.astro
@@ -1,41 +1,35 @@
 ---
 import { Icon } from "astro-icon";
 import NavLayout from "../layouts/NavLayout.astro";
+import ButtonMenuMobile from "./ButtonMenuMobile.astro";
 import LogoName from "./LogoName.astro";
+import NavAnchor from "./NavAnchor.astro";
 ---
 
 <NavLayout>
   <LogoName />
   <div class="hidden lg:flex justify-center items-center gap-6">
-    <a
-      href="#about"
-      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
-      >About</a
-    >
-    <a
-      href="#projects"
-      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
-      >Projects</a
-    >
-    <a
-      href="#skills"
-      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
-    >
-      Skills</a
-    >
+    <NavAnchor href="#about">About</NavAnchor>
+    <NavAnchor href="#projects">Projects</NavAnchor>
+    <NavAnchor href="#skills">Skills</NavAnchor>
   </div>
   <div class="hidden lg:flex justify-center items-center lg:gap-8 xl:gap-10">
-    <a href="" class="flex gap-3 text-gray-300 items-center"
+    <a
+      href="https://www.linkedin.com/in/francescoalterio/"
+      target="_blank"
+      class="flex gap-3 text-gray-300 items-center"
       ><Icon name="mdi:linkedin" class="w-7 text-white" /> Linkedin</a
     >
-    <a href="" class="flex gap-3 text-gray-300">
+    <a
+      href="https://github.com/francescoalterio"
+      target="_blank"
+      class="flex gap-3 text-gray-300"
+    >
       <Icon name="mdi:github" class="w-7 text-white" /> Github</a
     >
     <button class="bg-customGray-100 p-3 rounded-full">
       <Icon name="mdi:email-outline" class="w-7 text-primaryLight" />
     </button>
   </div>
-  <button class="lg:hidden bg-customGray-100 p-3 rounded-full">
-    <Icon name="mdi:menu-open" class="w-5 text-primaryLight" />
-  </button>
+  <ButtonMenuMobile />
 </NavLayout>
