add presentation card new text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,22 +59,22 @@ const allSkills = getAllSkillsInOneArray();
     >
       <div class="flex flex-col flex-1 gap-2">
         <PresentationCard
-          title="Lorem"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing."
-          secondDescription="lorem erwe pipe"
-          icon="mdi:resource-description-framework"
+          title="Teamwork"
+          description="Teamwork is essential for greater business and personal achievement."
+          secondDescription="Francesco Alterio"
+          icon="ri:team-fill"
         />
         <PresentationCard
-          title="Lorem"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing."
-          secondDescription="lorem erwe pipe"
-          icon="mdi:resource-description-framework"
+          title="Love for learning"
+          description="The love of learning is what makes a true programmer."
+          secondDescription="Francesco Alterio"
+          icon="ic:outline-menu-book"
         />
         <PresentationCard
-          title="Lorem"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing."
-          secondDescription="lorem erwe pipe"
-          icon="mdi:resource-description-framework"
+          title="Adaptability"
+          description="Adapting to new environments is easy if you love what you do."
+          secondDescription="Francesco Alterio"
+          icon="ic:outline-work"
         />
       </div>
       <div class="flex-1 flex flex-col lg:gap-8 xl:gap-10">
