--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import HomeNav from "../components/HomeNav.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 ---
 
@@ -13,5 +13,6 @@ import "../styles/global.css";
   </head>
   <body class="text-white bg-customGray-200 min-h-[1080px]">
     <slot />
+    <Footer />
   </body>
 </html>
