--- a/src/layouts/NavLayout.astro
+++ b/src/layouts/NavLayout.astro
@@ -2,7 +2,7 @@
 ---
 
 <nav
-  class="bg-customGray-200 flex flex-1 justify-between px-6 pt-6 sm:px-12 sm:pt-10 md:px-16 lg:px-28"
+  class="bg-customGray-200 flex flex-1 justify-between px-6 pt-6 sm:px-12 sm:pt-10 x-6 md:px-16 lg:px-28 xl:px-32 2xl:px-40"
 >
   <slot />
 </nav>
