--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const allSkills = getAllSkillsInOneArray();
 <BaseLayout>
   <HomeNav />
   <header
-    class="backgroundPer px-6 sm:px-12 md:px-16 lg:px-28 flex flex-col lg:flex-row items-center pt-20"
+    class="backgroundPer px-6 sm:px-12 md:px-16 lg:px-28 xl:px-32 2xl:px-40 flex flex-col lg:flex-row items-center pt-20"
   >
     <div
       class="flex flex-col gap-5 flex-1 items-center text-center lg:items-start lg:text-start"
