add new project card design and responsive

--- a/src/components/BorderedAnchor.astro
+++ b/src/components/BorderedAnchor.astro
@@ -11,12 +11,12 @@ const size = Astro.props.size || "small";
 const isFull = Astro.props.isFull || false;
 
 const sizeStyling = size === "small" ? "px-4 py-2" : "px-6 py-4 text-lg";
-const fullStyling = isFull ? "flex-1" : "";
+const fullStyling = isFull ? "w-full" : "";
 ---
 
 <a
   href={href}
-  class={`border border-primaryLight rounded-md text-primaryLight px-4 py-2 transition-all hover:bg-opacity-10 hover:bg-primary ${sizeStyling} ${fullStyling}`}
+  class={`border border-primaryLight rounded-md text-primaryLight px-4 py-2 transition-all hover:bg-opacity-10 hover:bg-primary ${sizeStyling} ${fullStyling} text-center`}
 >
   <slot />
 </a>
