--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,7 @@ const allSkills = getAllSkillsInOneArray();
       <div class="absolute top-[-9rem] left-0 flex gap-5 w-full justify-center">
         <PersonalDataCard icon="mdi:github">
           <p class="text-2xl font-semibold">
-            More than <NumberOfRepos client:load /> repos
+            More than {20 || <NumberOfRepos client:load />} repos
           </p>
           <a
             href="https://github.com/francescoalterio"
