--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -31,14 +31,13 @@ const {
 const imageURL = `/assets/projects/${fileName}`;
 const firstThreeTechs = technologies.slice(0, 3);
 
-const container = isEven ? "" : "flex-row-reverse";
-const dataContainer = isEven ? " items-end  right-0" : " items-start left-0";
-
 const shortDescription = description.split(" ").slice(0, 20).join(" ");
 ---
 
-<div class={`flex flex-1 relative ${container}`}>
-  <div class="w-3/5 rounded-md">
+<div
+  class={`flex relative min-w-full md:min-w-[290px] lg:min-w-[300px] xl:min-w-[300px] 2xl:min-w-[370px] 3xl:min-w-[500px] flex-1 justify-between flex-col `}
+>
+  <div class="rounded-md">
     <Picture
       src={imageURL}
       widths={[1200]}
@@ -48,24 +47,20 @@ const shortDescription = description.split(" ").slice(0, 20).join(" ");
       loading={loading || "eager"}
     />
   </div>
-  <div
-    class={`flex flex-col justify-center lg:gap-y-4 xl:gap-y-8 px-5 absolute h-full w-2/5 w- ${dataContainer}`}
-  >
-    <RolPill bgColor={projectTypes[projectType.toLowerCase()].color}>
-      <Icon name={projectTypes[projectType.toLowerCase()].icon} class="w-5" />
-      {projectType}
-    </RolPill>
-    <h4 class="text-2xl font-semibold">{name}</h4>
-    <p
-      class="bg-customGray-100 lg:p-4 xl:p-6 rounded-md lg:w-[140%] xl:w-[130%] 2xl:w-[120%]"
-    >
-      {
-        "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, nulla!Ipsam placeat, consectetur atque sed ad dolores tenetur assumenda sapiente consequatur quasi, facilis exercitationem saepe dignissimos eligendi asperiores nulla nostrum."
-          .split(" ")
-          .slice(0, 20)
-          .join(" ")
-      }<span class="text-primaryLight">...</span>
+  <div class={`flex flex-col items-center relative top-[-50px] gap-6`}>
+    <p class="bg-customGray-100 p-6 rounded-md w-11/12 text-xs">
+      {description.split(" ").slice(0, 20).join(" ")}<span
+        class="text-primaryLight">...</span
+      >
     </p>
+    <div class="flex w-full justify-between">
+      <h4 class="text-2xl font-semibold">{name}</h4>
+      <RolPill bgColor={projectTypes[projectType.toLowerCase()].color}>
+        <Icon name={projectTypes[projectType.toLowerCase()].icon} class="w-5" />
+        {projectType}
+      </RolPill>
+    </div>
+
     <div class="flex justify-center gap-1">
       {
         firstThreeTechs.map((x) => (
@@ -82,6 +77,6 @@ const shortDescription = description.split(" ").slice(0, 20).join(" ");
         )
       }
     </div>
-    <BorderedAnchor href={`/projects/${id}`}>Learn More</BorderedAnchor>
+    <BorderedAnchor href={`/projects/${id}`} isFull>Learn More</BorderedAnchor>
   </div>
 </div>
