--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -18,7 +18,7 @@ const filteredProjects =
     : projects.filter((x) => x.technologies.includes(projectFilter));
 ---
 
-<div class="flex flex-col gap-y-40 mt-10">
+<div class="flex flex-wrap justify-between gap-x-12 mt-10">
   {
     filteredProjects.reverse().map((project, index) => {
       const isEven = index % 2 === 0;
