--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon";
 ---
 
 <footer
-  class="relative bg-customGray-200 x-6 sm:px-12 md:px-16 lg:px-28 xl:px-32 2xl:px-40 flex pt-28 pb-36 gap-20 justify-center"
+  class="relative bg-customGray-200 x-6 sm:px-12 md:px-16 lg:px-28 xl:px-32 2xl:px-40 flex pt-28 pb-36 gap-20 flex-col lg:flex-row justify-center"
 >
   <div class="flex-1 flex flex-col">
     <p class="text-2xl font-semibold">
