--- a/src/components/HomeNav.astro
+++ b/src/components/HomeNav.astro
@@ -3,6 +3,7 @@ import { Icon } from "astro-icon";
 import NavLayout from "../layouts/NavLayout.astro";
 import LogoName from "./LogoName.astro";
 import NavAnchor from "./NavAnchor.astro";
+import EmailButton from "./EmailButton.astro";
 ---
 
 <NavLayout>
@@ -12,12 +13,14 @@ import NavAnchor from "./NavAnchor.astro";
     <NavAnchor href="#projects">Projects</NavAnchor>
     <NavAnchor href="#skills">Skills</NavAnchor>
   </div>
-  <div class="flex justify-center items-center gap-6 lg:gap-8 xl:gap-10">
+  <div
+    class="flex justify-center items-center gap-4 md:gap-6 lg:gap-8 xl:gap-10"
+  >
     <a
       href="https://www.linkedin.com/in/francescoalterio/"
       target="_blank"
       class="flex gap-3 text-gray-300 items-center"
-      ><Icon name="mdi:linkedin" class="w-9 lg:w-7 text-white" />
+      ><Icon name="mdi:linkedin" class="w-7 md:w-9 lg:w-7 text-white" />
       <span class="hidden lg:inline">Linkedin</span>
     </a>
     <a
@@ -25,9 +28,10 @@ import NavAnchor from "./NavAnchor.astro";
       target="_blank"
       class="flex gap-3 text-gray-300"
     >
-      <Icon name="mdi:github" class="w-9 lg:w-7 text-white" /><span
+      <Icon name="mdi:github" class="w-7 md:w-9 lg:w-7 text-white" /><span
         class="hidden lg:inline">Github</span
       >
     </a>
+    <EmailButton />
   </div>
 </NavLayout>
