--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ import { Icon } from "astro-icon";
       />
     </p>
   </div>
-  <div class="flex-1">
+  <div class="flex-1 text-center lg:text-left">
     <h4 class="text-xl font-semibold">Other social networks</h4>
     <ul class="flex gap-3 mt-5">
       <li
