--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const allSkills = getAllSkillsInOneArray();
   <main class="">
     <Section
       background="dark"
-      className=" pt-36 flex gap-12 lg:gap-20 xl:gap-32 2xl:gap-48 pb-[45rem] md:pb-56 flex-col lg:flex-row"
+      className=" pt-6 sm:pt-12 md:pt-16 lg:pt-36 flex gap-12 lg:gap-20 xl:gap-32 2xl:gap-48 pb-[45rem] md:pb-56 flex-col lg:flex-row"
       id="about"
     >
       <div class="flex flex-col flex-1 gap-2">
@@ -78,7 +78,9 @@ const allSkills = getAllSkillsInOneArray();
           icon="ic:outline-work"
         />
       </div>
-      <div class="flex-1 flex flex-col lg:gap-8 xl:gap-10">
+      <div
+        class="flex-1 flex flex-col text-center lg:text-left gap-4 lg:gap-8 xl:gap-10"
+      >
         <p class="text-xs text-gray-400">Introduce</p>
         <h2 class="lg:text-5xl xl:text-6xl font-semibold">
           Hi, welcome to my portfolio
