Personal data card fixing the mt y mb

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const allSkills = getAllSkillsInOneArray();
   <main class="">
     <Section
       background="dark"
-      className=" pt-6 sm:pt-12 md:pt-16 lg:pt-36 flex gap-12 lg:gap-20 xl:gap-32 2xl:gap-48 pb-[45rem] md:pb-56 flex-col lg:flex-row"
+      className=" pt-6 sm:pt-12 md:pt-16 lg:pt-36 flex gap-12 lg:gap-20 xl:gap-32 2xl:gap-48 pb-[28rem] sm:pb-[34rem] md:pb-56 flex-col lg:flex-row"
       id="about"
     >
       <div class="flex flex-col flex-1 gap-2">
@@ -105,7 +105,7 @@ const allSkills = getAllSkillsInOneArray();
     </Section>
     <Section
       background="light"
-      className="relative py-10 flex flex-col gap-16 pt-[45rem] md:pt-56"
+      className="relative py-10 flex flex-col gap-16 pt-[28rem] sm:pt-[34rem] md:pt-56"
       id="projects"
     >
       <div
