--- a/src/components/NavAnchor.astro
+++ b/src/components/NavAnchor.astro
@@ -8,7 +8,7 @@ const { href } = Astro.props;
 
 <a
   href={href}
-  class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
+  class="text-customGray-800 hover:text-primaryLight rounded-full py-2 font-semibold text-sm md:text-base"
 >
   <slot />
 </a>
