in project page descriptiopn text center

--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -67,7 +67,7 @@ const {
           {projectType}
         </RolPill>
       </div>
-      <p class="text-gray-400">{description}</p>
+      <p class="text-gray-400 text-center">{description}</p>
       <div class="flex gap-2 w-full flex-wrap justify-center">
         {
           technologies.map((x) => (
