--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,14 +10,17 @@ import { Icon } from "astro-icon";
       Would you like to contact me for a project?
     </p>
     <p class="text-sm text-gray-400 mt-4">You can write to my personal email</p>
-    <p
+    <a
       class="text-primaryLight text-lg font-semibold underline decoration-2 mt-10"
+      id="email-a"
+      href="https://mail.google.com/mail/?view=cm&fs=1&to=francescoalteriog@gmail.com"
+      target="_blank"
     >
       francescoalteriog@gmail.com <Icon
         name="ic:outline-keyboard-arrow-right"
         class="w-7 inline-block text-primaryLight"
       />
-    </p>
+    </a>
   </div>
   <div class="flex-1 text-center lg:text-left">
     <h4 class="text-xl font-semibold">Other social networks</h4>
