--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -31,7 +31,7 @@ const {
 const imageURL = `/assets/projects/${fileName}`;
 const firstThreeTechs = technologies.slice(0, 3);
 
-const shortDescription = description.split(" ").slice(0, 20).join(" ");
+const shortDescription = description.split(" ").slice(0, 25).join(" ");
 ---
 
 <div
@@ -49,8 +49,8 @@ const shortDescription = description.split(" ").slice(0, 20).join(" ");
   </div>
   <div class={`flex flex-col items-center relative top-[-50px] gap-6`}>
     <p class="bg-customGray-100 p-6 rounded-md w-11/12 text-xs">
-      {description.split(" ").slice(0, 20).join(" ")}<span
-        class="text-primaryLight">...</span
+      {shortDescription}<span class="text-primaryLight"
+        >{description.length > shortDescription.length && "..."}</span
       >
     </p>
     <div class="flex w-full justify-between">
