--- a/src/pages/projects/[language].astro
+++ b/src/pages/projects/[language].astro
@@ -30,7 +30,30 @@ import NavAnchor from "../../components/NavAnchor.astro";
 const language = Astro.params.language;
 ---
 
-<BaseLayout>
+<BaseLayout
+  Head={(
+    <>
+      <title>Francesco Alterio | Projects | Portfolio</title>
+      <meta
+        name="description"
+        content="All projects and skills of Francesco Alterio | Portfolio"
+      />
+      <meta
+        property="og:title"
+        content="Francesco Alterio | Projects | Portfolio"
+      />
+      <meta
+        property="og:description"
+        content="All projects of Francesco Alterio"
+      />
+      <meta property="og:url" content="https://francescoalterio.tech/" />
+      <meta
+        property="og:image"
+        content="https://francescoalterio.tech/presentation.png"
+      />
+    </>
+  )}
+>
   <NavLayout>
     <LogoName />
     <div
